--- a/elutsykkel/agiilne.html
+++ b/elutsykkel/agiilne.html
@@ -10,7 +10,9 @@
 
 <body>
     <p>
-    <h1>Agiilne mudel</h1>
+    <header>
+        <h1>Agiilne mudel</h1>
+    </header>
     <h3>
         Agiilne mudel on iteratiivsete ja inkrementaalsete mudelite kombinatsioon, see tähendab, et see koosneb
         iteratiivsetest ja inkrementaalsetest mudelitest.
@@ -47,7 +49,7 @@
     <br>
     <br>
 
-    <img src="../pildid/agile.jpg" alt="Agiilne mudel" >
+    <img src="../pildid/agile.jpg" alt="Agiilne mudel">
 
     </p>
     <br>
@@ -89,13 +91,15 @@
         </tr>
     </table>
     <br>
-    <a href="https://www.geeksforgeeks.org/top-8-software-development-models-used-in-industry/" target="_blank">Kasutatud kirjandus</a>
+    <a href="https://www.geeksforgeeks.org/top-8-software-development-models-used-in-industry/"
+        target="_blank">Kasutatud kirjandus</a>
     <br>
     <br>
 
-    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>    <br>
+    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
 
     <br>
     <br>
 </body>
+
 </html>
