--- a/elutsykkel/big-bang.html
+++ b/elutsykkel/big-bang.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <p>
-    <h1>Big Bang mudel</h1>
 
+    <header>
+        <h1>Big Bang mudel</h1>
+    </header>
+    <p>
     Big Bangi mudel on SDLC-mudel, mis saab alguse mitte millestki. See on SDLC (Software Development Life Cycle)
     kõige lihtsam mudel, kuna see ei nõua peaaegu üldse planeerimist. See nõuab aga palju raha ja kodeerimist ning
     võtab rohkem aega. Suure Paugu mudeli nimi pandi paika pärast "Suuret Suurt Pauku", mis viis galaktikate,
