--- a/uml-diagramm/erd.html
+++ b/uml-diagramm/erd.html
@@ -96,7 +96,7 @@
         </tr>
     </table>
     <h2>Võtmed <sup><a href="https://et.wikipedia.org/wiki/Andmebaas" target="_blank"
-                style="font-size: 15px;"></a>(3)</sup></h2>
+                style="font-size: 15px;">(3)</a></sup></h2>
     <ul>
         <li>Primaarvõti ehk esmasvõti (Primary Key): on kandidaatvõti, mis on valitud relatsiooni kirjeid unikaalselt
             identifitseerima</li>
