Tee Windows Forms leht

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="btc/main.html">Bitcoin kalkulaator</a></li>
                     <br>
                     <li><a href="uml-diagramm/main.html">UML-diagrammid</a></li>
+                    <li><a href="winWorms/winWord.html">Windows Forms Rakendus</a></li>
 
          
         </div>
