--- a/põhi.html
+++ b/põhi.html
@@ -18,6 +18,12 @@
         <div class="column middle">
 
             kesk
+
+            <br>
+            <br>
+            <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
+            <br>
+            <br>
         </div>
         <div class="column right">
             parem
