--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <br>
                     <li><a href="uml-diagramm/main.html">UML-diagrammid</a></li>
                     <li><a href="winWorms/winWord.html">Windows Forms Rakendus</a></li>
+                    <li><a href="ProjectLibre/main.html">Project Libre</a></li>
 
          
         </div>
