Project Libre update

--- a/ProjectLibre/main.html
+++ b/ProjectLibre/main.html
@@ -17,8 +17,8 @@
         <div class="column left"></div>
         <div class="column middle">
             <button class="floating" onclick="window.location.href='Details.html'">Details</button>
-            <button class="floating" onclick="window.location.href='who-does-what.html'">How Does What</button>
-            <button class="floating" onclick="window.location.href='movie.pod'">Download</button>
+            <button class="floating" onclick="window.location.href='Who-Does-What.html'">How Does What</button>
+            <button class="floating" onclick="window.location.href='Movie.pod'">Download</button>
             <br>
             <br>
             <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
