Project Libre update

--- a/ProjectLibre/main.html
+++ b/ProjectLibre/main.html
@@ -15,7 +15,7 @@
     </header>
     <div class="row">
         <div class="column left"></div>
-        <div class="column middle">
+        <div class="column middle" style="text-align: center;" >
             <button class="floating" onclick="window.location.href='Details.html'">Details</button>
             <button class="floating" onclick="window.location.href='Who-Does-What.html'">How Does What</button>
             <button class="floating" onclick="window.location.href='Movie.pod'">Download</button>
