--- a/elutsykkel/agiilne.html
+++ b/elutsykkel/agiilne.html
@@ -95,6 +95,7 @@
         target="_blank">Kasutatud kirjandus</a>
     <br>
     <br>
+    <button class="floating" onclick="window.location.href='agiilneLisa.html'">Loe rohkem siit</button>
 
     <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
 
