Domain-Driven Design (DDD)

--- a/elutsykkel/agiilne/domain-driven.html
+++ b/elutsykkel/agiilne/domain-driven.html
@@ -4,34 +4,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UML-diagrammid</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="pildid/icon.jpeg" type="image/x-icon">
+    <title>Domain-Driven Design</title>
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="icon" href="../../pildid/icon.jpeg" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <h1> pealkiri</h1>
+        <h1>Domain-Driven Design</h1>
     </header>
     <div class="row">
-        <div class="column left">vasak</div>
+        <div class="column left"></div>
         <div class="column middle">
 
-            kesk
+            <h2>Domain-Driven Design</h2>
+            <p>Domain-Driven Design (DDD) on meetod, mis seab prioriteediks konkreetse probleemvaldkonna mõistmise ja
+                modelleerimise, kus tarkvarasüsteem toimib. See rõhutab vajadust tiheda koostöö järele
+                domeeniekspertidega, et saada põhjalik arusaam domeeni üksikasjadest ja keerukusest. DDD pakub
+                põhimõtteid, mustreid ja tavasid, mis aitavad arendajatel oma tarkvarakujunduses domeenikontseptsioone
+                täpselt tabada ja esitada.
+            </p>
+            <ol>
+                <li>Domain</li>
+                <ul>
+                    <li>See viitab konkreetsele teemavaldkonnale või probleemile, mida tarkvarasüsteem püüab lahendada.
+                    </li>
+                    <li>Näiteks pangarakenduses hõlmab domeen selliseid mõisteid nagu kontod, tehingud, kliendid ja
+                        asjakohased pangaeeskirjad.</li>
+                </ul>
+                <li>Driven </li>
+                <ul>
+                    <li>"Driven" tähendab, et tarkvarasüsteemi kujundust mõjutavad domeeni omadused ja vajadused.</li>
+                    <li>See näitab, et disainivalikud põhinevad valdkonna kindlal mõistmisel, mitte ainult tehnilistel
+                        aspektidel või rakenduse üksikasjadel.</li>
+                </ul>
+                <li>Disain</li>
+                <ul>
+                    <li>“Disain” on tarkvarasüsteemi plaani või kavandi koostamise protsess.</li>
+                    <li>See hõlmab seda, kuidas erinevad komponendid interakteeruvad ja kuidas süsteem vastab oma
+                        funktsionaalsetele ja mittefunktsionaalsetele nõuetele.</li>
+                </ul>
+            </ol>
+            <br>
 
+            <figure>
+                <img src="../agiilne/picture/Domain-Driven-Design.png" alt="Domain-Driven Design">
+                <figcaption>Domain-Driven Design</figcaption>
+            </figure>
             <br>
+
+            <table>
+                <tr>
+                    <th colspan="2">Domain-Driven Design</th>
+                </tr>
+                <tr>
+                    <th>Eelised</th>
+                    <th>Puudused</th>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+
+                            <li>Edendab tõhusat suhtlust domeeniekspertide, arendajate ja sidusrühmade vahel, kasutades
+                                ühist keelt.</li>
+                            <li>Aitab meeskondadel seada prioriteediks rakenduse kõige väärtuslikumad valdkonnad, et
+                                saavutada ärieesmärgid.</li>
+                            <li>Julgustab kujundama, mis kohandub arenevate ärivajaduste ja turutingimustega.</li>
+                            <li>Säilitab selge vahe domeeniloogika, infrastruktuuri ja kasutajaliidese vahel.</li>
+                            <li>Toetab täpselt määratletud domeeniobjekte lihtsamaks ja täpsemaks testimiseks.</li>
+
+                        </ul>
+                    </td>
+
+                    <td>
+                        <ul>
+
+                            <li>DDD võib tekitada keerukust, eriti suurtes domeenides. Keeruliste ärivaldkondade täpne
+                                modelleerimine nõuab mitmetähenduslikkuse sügavat mõistmist ja hoolikat juhtimist.</li>
+                            <li>Keerulistes valdkondades võib erinevate mudelite ja piiratud kontekstide joondamine olla
+                                keeruline. Selge suhtlus ja koordineerimine on vastuolude vältimiseks hädavajalikud.
+                            </li>
+                            <li>DDD rakendamine võib nõuda uusi tehnoloogiaid ja raamistikke, mis raskendab
+                                integreerimist olemasolevate süsteemidega. Jõudluse ja mastaapsuse probleemide
+                                lahendamine on eduka kasutuselevõtu jaoks ülioluline.</li>
+                            <li>Meeskonnaliikmed võivad traditsiooniliste meetodite tundmise tõttu DDD-le vastu seista.
+                                Selle ületamiseks on vaja tõhusat suhtlust ja koolitust DDD eeliste kohta.</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
             <br>
-            <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
-            <br>
-            <br>
+            <p><a href="https://jestjs.io/">Jest</a> on JavaScripti testimise raamistik, mille on loonud Facebook. See
+                pakub lihtsat ja intuitiivset testimise API-d, mis muudab JavaScripti koodi testide kirjutamise
+                lihtsaks. Jest pakub ka selliseid funktsioone nagu pilkamine ja hetktõmmiste testimine, mis aitavad teil
+                kirjutada tõhusamaid ja tõhusamaid teste.</p>
+
+            <p>
+                Kasutatud kirjandus:
+                <br>
+                <a
+                    href="https://www.geeksforgeeks.org/domain-driven-design-ddd/?ref=header_outind">https://www.geeksforgeeks.org/domain-driven-design-ddd/?ref=header_outind</a>
+            </p>
+
+
+            <div class="floating">
+                <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
+                <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
+                <br>
+            </div>
         </div>
         <div class="column right">
-            parem
+
         </div>
     </div>
     <footer>
         Orvet Priimägi - TARge24
     </footer>
+
+    <script>
+        // Get the button
+        let mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
 
 </body>
 
