Secure by design

--- a/elutsykkel/agiilne.html
+++ b/elutsykkel/agiilne.html
@@ -95,9 +95,11 @@
         target="_blank">Kasutatud kirjandus</a>
     <br>
     <br>
-    <button class="floating" onclick="window.location.href='agiilneLisa.html'">Loe rohkem siit</button>
+    <div class="floating">
+    <button id="myBtn" class="floating" onclick="window.location.href='agiilneLisa.html'">Loe rohkem siit</button>
 
-    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
+    <button onclick="javascript:window.history.back();" class="floating" id="backBtn">Tagasi</button> <br>
+</div>
 
     <br>
     <br>
