--- a/elutsykkel/agiilne/secure.html
+++ b/elutsykkel/agiilne/secure.html
@@ -14,7 +14,23 @@
     <h1>Secure by design</h1>
   </header>
   <div class="row">
-    <div class="column left"></div>
+    <div class="column left">
+      <nav>
+        <button class="floating" onclick="window.location.href='behavior-driven.html'">Behavior-driven
+          development</button>
+        <button class="floating" onclick="window.location.href='design-driven.html'">Design-driven development</button>
+        <button class="floating" onclick="window.location.href='domain-driven.html'">Domain-driven design</button>
+        <button class="floating" onclick="window.location.href='secure.html'">Secure by design</button>
+        <button class="floating" onclick="window.location.href='test-driven.html'">Test-driven development</button>
+        <button class="floating" onclick="window.location.href='acceptance.html'">Acceptance test-driven
+          development</button>
+        <button class="floating" onclick="window.location.href='continuous.html'">Continuous test-driven
+          development</button>
+        <button class="floating" onclick="window.location.href='specification.html'">Specification by example</button>
+        <button class="floating" onclick="window.location.href='data-driven.html'">Data-driven development</button>
+        <button class="floating" onclick="window.location.href='data-oriented.html'">Data-oriented design</button>
+      </nav>
+    </div>
     <div class="column middle">
       <h2>Secure by design</h2>
 
@@ -39,7 +55,7 @@
         <figcaption>Software development vs Secure by design development</figcaption>
 
       </figure>
-<br>
+      <br>
 
 
       <table>
@@ -83,18 +99,34 @@
           </td>
         </tr>
       </table>
+
+      <br>
+      <p> <a href="https://www.nist.gov/cyberframework" target="_blank">NIST</a> avaldas <a
+          href="https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-160v1.pdf" target="_blank"> spetsiaalse väljaande
+          800-160</a>, et anda juhised usaldusväärsete ja turvaliste süsteemide loomiseks. Dokument aitab ettevõtetel
+        uuesti läbi mõelda oma investeeringud süsteemide, komponentide, rakenduste ja võrkude nõuetesse, arhitektuuri,
+        disaini ja arendusse.
+<br>
+        See ei ole rakendamise plaan, vaid pigem, nagu sissejuhatuses öeldakse, "kataloog või käsiraamat süsteemi
+        elutsükli protsesside süsteemitehnilise vaatenurga tuvastatud turbetulemuste saavutamiseks, jättes selle
+        inseneriorganisatsiooni kogemuste ja teadmiste hooleks. et teha kindlaks, mis on selle eesmärgi jaoks õige."
+<br>
+        Kontekstualiseerimine ja organisatsiooni turvariskitaluvuse, asjatundlikkuse ja eelarvega kohanemine on
+        turvameeskonna ülesanne .</p>
       <br>
       <p>
         Kasutatud kirjandus:
         <br>
-        <a href="https://en.wikipedia.org/wiki/Secure_by_design" target="_blank">https://en.wikipedia.org/wiki/Secure_by_design</a><br>
-        <a
-          href="https://www.ivanti.com/blog/secure-by-design-principles-are-more-important-than-ever" target="_blank">https://www.ivanti.com/blog/secure-by-design-principles-are-more-important-than-ever</a>
-        <a href="https://www.jit.io/resources/app-security/secure-design-principles" target="_blank">https://www.jit.io/resources/app-security/secure-design-principles</a>
-        </p>
+        <a href="https://en.wikipedia.org/wiki/Secure_by_design"
+          target="_blank">https://en.wikipedia.org/wiki/Secure_by_design</a><br>
+        <a href="https://www.ivanti.com/blog/secure-by-design-principles-are-more-important-than-ever"
+          target="_blank">https://www.ivanti.com/blog/secure-by-design-principles-are-more-important-than-ever</a>
+        <a href="https://www.jit.io/resources/app-security/secure-design-principles"
+          target="_blank">https://www.jit.io/resources/app-security/secure-design-principles</a>
+      </p>
 
       <div class="floating">
-     
+
         <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
         <br>
