--- a/elutsykkel/agiilne/data-driven.html
+++ b/elutsykkel/agiilne/data-driven.html
@@ -14,7 +14,20 @@
         <h1> pealkiri</h1>
     </header>
     <div class="row">
-        <div class="column left">vasak</div>
+      <div class="column left">
+        <nav>
+        <button class="floating" onclick="window.location.href='behavior-driven.html'">Behavior-driven development</button>
+        <button class="floating" onclick="window.location.href='design-driven.html'">Design-driven development</button>
+        <button class="floating" onclick="window.location.href='domain-driven.html'">Domain-driven design</button>
+        <button class="floating" onclick="window.location.href='secure.html'">Secure by design</button>
+        <button class="floating" onclick="window.location.href='test-driven.html'">Test-driven development</button>
+        <button class="floating" onclick="window.location.href='acceptance.html'">Acceptance test-driven development</button>
+        <button class="floating" onclick="window.location.href='continuous.html'">Continuous test-driven development</button>
+        <button class="floating" onclick="window.location.href='specification.html'">Specification by example</button>
+        <button class="floating" onclick="window.location.href='data-driven.html'">Data-driven development</button>
+        <button class="floating" onclick="window.location.href='data-oriented.html'">Data-oriented design</button>
+    </nav>
+    </div>
         <div class="column middle">
 
             kesk
