Continuous test-driven development

--- a/elutsykkel/agiilne/acceptance.html
+++ b/elutsykkel/agiilne/acceptance.html
@@ -116,6 +116,16 @@
         ATDD jaoks. See võimaldab huvipooltel kirjutada aktseptantskriteeriume inimkeeles arusaadavas formaadis, mida
         nimetatakse Gherkiniks. Cucumber automatiseerib need aktseptantskriteeriumid testidena, mida saab rakenduse
         vastu käivitada. Cucumber toetab mitmeid programmeerimiskeeli, sealhulgas Java, Ruby ja JavaScript.</p>
+      <br>
+      <p>
+        Kasutatud kirjandus:
+        <br>
+        <a
+          href="https://www.geeksforgeeks.org/acceptance-test-driven-development-atdd-in-software-engineering/">https://www.geeksforgeeks.org/acceptance-test-driven-development-atdd-in-software-engineering/</a>
+        <br>
+        <a
+          href="https://medium.com/software-engineering-kmitl/acceptance-test-driven-development-69394f35200b">https://medium.com/software-engineering-kmitl/acceptance-test-driven-development-69394f35200b</a>
+      </p>
 
       <div class="floating">
         <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
