--- a/elutsykkel/agiilne/specification.html
+++ b/elutsykkel/agiilne/specification.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UML-diagrammid</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="pildid/icon.jpeg" type="image/x-icon">
+    <title>Specification by example</title>
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="icon" href="../../pildid/icon.jpeg" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <h1> pealkiri</h1>
+        <h1>Specification by example</h1>
     </header>
     <div class="row">
       <div class="column left">
@@ -30,7 +30,7 @@
     </div>
         <div class="column middle">
 
-            kesk
+            <h2>Specification by example</h2>
 
             <div class="floating">
                 <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="column right">
-            parem
+            
         </div>
     </div>
     <footer>
